chore(backend): fix pmd and spotbugs warnings